// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Motif test suite should generate createMotif based on chord 1`] = `
Array [
  Object {
    "dur": "8n",
    "midi": 64,
    "note": "E3",
    "time": 0,
  },
  Object {
    "dur": "4n",
    "midi": 64,
    "note": "E3",
    "time": 240,
  },
  Object {
    "dur": "8nt",
    "midi": 61,
    "note": "Db3",
    "time": 720,
  },
  Object {
    "dur": "8n",
    "midi": 64,
    "note": "E3",
    "time": 880,
  },
  Object {
    "dur": "16n",
    "midi": 68,
    "note": "Ab3",
    "time": 1120,
  },
  Object {
    "dur": "4nt",
    "midi": 64,
    "note": "E3",
    "time": 1240,
  },
  Object {
    "dur": "8n",
    "midi": 68,
    "note": "Ab3",
    "time": 1560,
  },
  Object {
    "dur": "16n",
    "midi": 64,
    "note": "E3",
    "time": 1800,
  },
]
`;

exports[`A Motif test suite should generate createMotif based on chord 2`] = `
Array [
  Object {
    "dur": "8n",
    "midi": 64,
    "note": "E3",
    "time": 0,
  },
  Object {
    "dur": "4nd",
    "midi": 68,
    "note": "Ab3",
    "time": 240,
  },
  Object {
    "dur": "4n",
    "midi": 64,
    "note": "E3",
    "time": 960,
  },
  Object {
    "dur": "4nt",
    "midi": 64,
    "note": "E3",
    "time": 1440,
  },
  Object {
    "dur": "4nd",
    "midi": 64,
    "note": "E3",
    "time": 1760,
  },
  Object {
    "dur": "8n",
    "midi": 64,
    "note": "E3",
    "time": 2480,
  },
  Object {
    "dur": "4nt",
    "midi": 68,
    "note": "Ab3",
    "time": 2720,
  },
  Object {
    "dur": "4n",
    "midi": 64,
    "note": "E3",
    "time": 3040,
  },
  Object {
    "dur": "8nt",
    "midi": 64,
    "note": "E3",
    "time": 3520,
  },
  Object {
    "dur": "8nt",
    "midi": 68,
    "note": "Ab3",
    "time": 3680,
  },
]
`;

exports[`A Motif test suite should generate motif based on scale 1`] = `
Array [
  Object {
    "dur": "8n",
    "midi": 74,
    "note": "D4",
    "time": 0,
  },
  Object {
    "dur": "4n",
    "midi": 73,
    "note": "C#4",
    "time": 240,
  },
  Object {
    "dur": "8nt",
    "midi": 69,
    "note": "A3",
    "time": 720,
  },
  Object {
    "dur": "8n",
    "midi": 73,
    "note": "C#4",
    "time": 880,
  },
  Object {
    "dur": "16n",
    "midi": 76,
    "note": "E4",
    "time": 1120,
  },
  Object {
    "dur": "4nt",
    "midi": 74,
    "note": "D4",
    "time": 1240,
  },
  Object {
    "dur": "8n",
    "midi": 76,
    "note": "E4",
    "time": 1560,
  },
  Object {
    "dur": "16n",
    "midi": 71,
    "note": "B3",
    "time": 1800,
  },
]
`;

exports[`A Motif test suite should generate motif based on scale 2`] = `
Array [
  Object {
    "dur": "8n",
    "midi": 73,
    "note": "C#4",
    "time": 0,
  },
  Object {
    "dur": "4nd",
    "midi": 74,
    "note": "D4",
    "time": 240,
  },
  Object {
    "dur": "4n",
    "midi": 74,
    "note": "D4",
    "time": 960,
  },
  Object {
    "dur": "4nt",
    "midi": 73,
    "note": "C#4",
    "time": 1440,
  },
  Object {
    "dur": "4nd",
    "midi": 71,
    "note": "B3",
    "time": 1760,
  },
  Object {
    "dur": "8n",
    "midi": 71,
    "note": "B3",
    "time": 2480,
  },
  Object {
    "dur": "4nt",
    "midi": 76,
    "note": "E4",
    "time": 2720,
  },
  Object {
    "dur": "4n",
    "midi": 71,
    "note": "B3",
    "time": 3040,
  },
  Object {
    "dur": "8nt",
    "midi": 71,
    "note": "B3",
    "time": 3520,
  },
  Object {
    "dur": "8nt",
    "midi": 74,
    "note": "D4",
    "time": 3680,
  },
]
`;

exports[`A Motif test suite should return pattern with time = start time 1`] = `
Array [
  Object {
    "dur": "8n",
    "midi": 70,
    "note": "Bb3",
    "time": 0,
  },
  Object {
    "dur": "16n",
    "midi": 64,
    "note": "E3",
    "time": 240,
  },
  Object {
    "dur": "16n",
    "midi": 68,
    "note": "Ab3",
    "time": 360,
  },
]
`;

exports[`A Motif test suite should return pattern with time = start time 2`] = `
Array [
  Object {
    "dur": "4nd",
    "midi": 64,
    "note": "E3",
    "time": 480,
  },
  Object {
    "dur": "4nt",
    "midi": 68,
    "note": "Ab3",
    "time": 1200,
  },
  Object {
    "dur": "8n",
    "midi": 64,
    "note": "E3",
    "time": 1520,
  },
  Object {
    "dur": "8nt",
    "midi": 64,
    "note": "E3",
    "time": 1760,
  },
]
`;
